--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@ header nav {
     padding: 10px;
 }
 
+header a {
+    font-weight: bolder;
+    color: var(--azul-escuro);
+    text-decoration: none;
+}
+
 header span {
     padding: 10px;
     text-align: center;
@@ -49,7 +55,7 @@ main {
     margin-top: 10px;
     padding: 10px;
 
-    min-height: 1000px;
+    min-height: 500px;
     max-width: 800px;
 
     border-radius: 10px;
