--- a/style.css
+++ b/style.css
@@ -10,9 +10,16 @@
 }
 
 body {
+    color: var(--branco);
     margin: 0%;
     background-color: var(--azul-escuro);
 }
+
+h1 {
+    text-align: center;
+}
+
+/*========== header =================================================================*/
 
 header {
     background-image: linear-gradient(var(--vermelho), var(--vermelho-escuro));
@@ -22,7 +29,6 @@ header h1{
     margin-top: 0%;
     margin-bottom: 0%;
     padding: 10px;
-    text-align: center; 
 }
 
 header nav {
@@ -50,6 +56,8 @@ header span:hover {
     background-color: var(--vermelho);
 }
 
+/*======== main ======================================================================*/
+
 main {
     margin: auto;
     margin-top: 10px;
@@ -61,5 +69,8 @@ main {
     border-radius: 10px;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.500);
     background-color: white;
+
+    color: black;
 }
+
 
