--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ header span:hover {
 main {
     margin: auto;
     margin-top: 10px;
+    margin-bottom: 10px;
     padding: 10px;
 
     min-height: 500px;
