--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@
     --branco:#F0EEED;
 }
 
+/*========== fontes ================================================================*/
+
+@font-face {
+    font-family: vmLTech;
+    src: url(fonte/conthrax-sb.ttf);
+}
+
 body {
     color: var(--branco);
     margin: 0%;
@@ -16,7 +23,16 @@ body {
 }
 
 h1 {
+    font-family: vmLTech;
     text-align: center;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 10px;
+    text-align: justify;
+    text-indent: 10%;
+    line-height: 25px;
 }
 
 /*========== header =================================================================*/
