--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@
     src: url(fonte/conthrax-sb.ttf);
 }
 
+@font-face {
+    font-family: paragrafo;
+    src: url(fonte/ShareTech-Regular.ttf);
+}
+
 body {
     color: var(--branco);
     margin: 0%;
@@ -28,11 +33,17 @@ h1 {
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: paragrafo;
+    font-size: large;
     margin: 10px;
     text-align: justify;
     text-indent: 10%;
     line-height: 25px;
+}
+
+a {
+    font-family: paragrafo;
+    font-size: large;
 }
 
 /*========== header =================================================================*/
@@ -89,5 +100,3 @@ main {
 
     color: black;
 }
-
-
