--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ a {
     font-size: large;
 }
 
+img {
+    padding: 10px;
+}
+
 /*========== header =================================================================*/
 
 header {
