--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ h2 {
 p {
     font-family: paragrafo;
     font-size: large;
-    margin: 10px;
+    padding: 20px;
+    padding-top: 0;
     text-align: justify;
     text-indent: 10%;
     line-height: 25px;
@@ -95,7 +96,6 @@ main {
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
-    padding: 10px;
 
     min-height: 500px;
     width: 85%;
@@ -110,4 +110,9 @@ main {
 
 main img {
     padding: 10px;
+}
+
+main h1, h2{
+    padding: 20px;
+    margin: 0;
 }
