--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 }
 
 body {
-    color: var(--branco);
+    color: rgb(0, 220, 220);
     margin: 0%;
     background-color: var(--azul-escuro);
 }
@@ -60,6 +60,7 @@ header {
 }
 
 header h1{
+    color: var(--branco);
     margin-top: 0%;
     margin-bottom: 0%;
     padding: 10px;
@@ -105,7 +106,7 @@ main {
 
     border-radius: 10px;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.500);
-    background-color: rgb(0, 200, 200);
+    background-color: var(--azul-claro);
 
     color: black;
 }
