--- a/style.css
+++ b/style.css
@@ -53,6 +53,11 @@ a {
     font-size: large;
 }
 
+div.p {
+    margin: auto;
+    max-width: 800px;
+}
+
 /*========== header =================================================================*/
 
 header {
