--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ p {
 a {
     font-family: paragrafo;
     font-size: large;
+    color: green;
 }
 
 div.p {
@@ -77,7 +78,7 @@ header nav {
 
 header a {
     font-weight: bolder;
-    color: var(--azul-escuro);
+    color:rgb(60, 60, 60);
     text-decoration: none;
 }
 
