--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ main {
 
     border-radius: 10px;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.500);
-    background-color: var(--azul-claro);
+    background-color: rgb(0, 200, 200);
 
     color: black;
 }
