--- a/style.css
+++ b/style.css
@@ -59,6 +59,30 @@ div.p {
     max-width: 800px;
 }
 
+div.mvv {
+    display: inline-block;
+
+    width: 1000px;
+    max-width: 300px;
+    height: 300px;
+
+    border-style: solid;
+    border-color: black;
+    border-radius: 20px;
+    background-color: var(--branco);
+    color: var(--azul-escuro);
+}
+
+div.mvv h1 {
+    margin-bottom: 0%;
+}
+
+div.mvv p {
+    padding: 0%;
+    margin: 0%;
+    text-align: justify;
+}
+
 /*========== header =================================================================*/
 
 header {
